# llm_sizes

./: CLAUDE.md  PLAN.md  README.md  RESEARCH_NOTES.md  STATUS.md  frontier_and_open_params.html  index.html  llm_sizes.csv  pyproject.toml
.claude/agents/: researcher.md  verifier.md
labs/: .header  bloom.csv  bloom.notes.md  dbrx_arctic_grok1.csv  dbrx_arctic_grok1.notes.md  deepseek_v4.csv  deepseek_v4.notes.md  eleutherai.csv  eleutherai.notes.md  falcon.csv  falcon.notes.md  nemotron.csv  nemotron.notes.md  other_open.csv  other_open.notes.md  phi.csv  phi.notes.md  pre_llm.csv  pre_llm.notes.md  yi.csv  yi.notes.md
scripts/: plot_frontier.py  plot_params.py  plot_params_interactive.py
src/llm_sizes_tools/: check_urls.py  csv_row.py
